Archive2/01/042f089d1c3366/output
+ clang++ -std=c++11 -O3 -Wall -pedantic -pthread main.cpp
main.cpp:49:40: error: default initialization of an object of const type 'const hash<std::string>' requires a user-provided default constructor
 const hash<std::string> hash<Option>::strHash;
                                       ^
main.cpp:50:33: error: default initialization of an object of const type 'const hash<char>' requires a user-provided default constructor
 const hash<char> hash<Option>::charHash;
                                ^
2 errors generated.
